Fix `Image` element and Increase Text Contrast

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -90,10 +90,10 @@ body {
 }
 a {
     text-decoration: none;
-    color: #a92bc9;
+    color: #52a3fd;
 }
 a:hover {
-    color: #9326ae;
+    color: #86beff;
 }
 // Setup differences in light mode
 @media (prefers-color-scheme: light) {
